# kicad-doc

./: .gitattributes  .gitignore  .travis.yml  AUTHORS_README.adoc  CHEATSHEET.adoc  CMakeLists.txt  Dockerfile  LICENSE.adoc  README.adoc  cmake-readme.adoc  docs-versioning.adoc  translation_instructions.adoc  windows_dependencies.adoc
src/: CMakeLists.txt  Makefile  README.adoc  TRANSLATION_STATUS.adoc  TRANSLATION_STATUS_UPDATE.sh  i18n_status.csv  webdocindex.adoc
src/CvPcb/: CMakeLists.txt  CvPcb.adoc  CvPcb_footprint_libraries_tables.adoc
src/CvPcb/po/: addendum.ja  fr.po  it.po  ja.po  pl.po
src/Eeschema/: CMakeLists.txt  Eeschema.adoc  Eeschema_automatic_classification_annotation.adoc  Eeschema_component_library_editor.adoc  Eeschema_create_a_netlist.adoc  Eeschema_creating_customized_netlists_and_bom_files.adoc  Eeschema_design_verification_with_drc.adoc  Eeschema_design_verification_with_erc.adoc  Eeschema_general_top_toolbar.adoc  Eeschema_generic_commands.adoc  Eeschema_hierarchical_schematics.adoc  Eeschema_introduction.adoc  Eeschema_libedit_complements.adoc  Eeschema_main_top_menu.adoc  Eeschema_plot_and_print.adoc  Eeschema_schematic_creation_and_editing.adoc  Eeschema_viewlib.adoc
src/Eeschema/po/: addendum.ja  it.po  ja.po  pl.po
src/GUI_Translation_HOWTO/: CMakeLists.txt  GUI_Translation_HOWTO.adoc
src/GerbView/: CMakeLists.txt  GerbView.adoc  GerbView_chapter_01.adoc  GerbView_chapter_02.adoc  GerbView_chapter_03.adoc
src/GerbView/po/: addendum.ja  it.po  ja.po  pl.po
src/Getting_Started_in_KiCad/: CMakeLists.txt  Getting_Started_in_KiCad.adoc
src/Getting_Started_in_KiCad/po/: addendum.fr  fr.po  it.po  ja.po  nl.po  pl.po
src/IDF_Exporter/: CMakeLists.txt  IDF_Exporter.adoc
src/IDF_Exporter/po/: addendum.ja  it.po  ja.po  pl.po
src/Interactive_Router/po/: it.po  pl.po
src/KiCad/: CMakeLists.txt  KiCad.adoc
src/KiCad/po/: addendum.ja  addendum.pl  it.po  ja.po  pl.po
src/Pcbnew/: CMakeLists.txt  Pcbnew.adoc  Pcbnew_create_and_modify_board.adoc  Pcbnew_creating_editing_footprints.adoc  Pcbnew_creating_editing_modules.adoc  Pcbnew_editing_tools.adoc  Pcbnew_fabrication_files.adoc  Pcbnew_footprint_placement.adoc  Pcbnew_general_operations.adoc  Pcbnew_installation.adoc  Pcbnew_interactive_router.adoc  Pcbnew_introduction.adoc  Pcbnew_layers.adoc  Pcbnew_managing_libs.adoc  Pcbnew_module_placement.adoc  Pcbnew_python_scripting.adoc  Pcbnew_routing.adoc  Pcbnew_schematics.adoc  Pcbnew_zones.adoc
src/Pcbnew/po/: addendum.ja  fr.po  it.po  ja.po  pl.po
src/Pl_Editor/: CMakeLists.txt  Pl_Editor.adoc  make.sh
src/Pl_Editor/po/: fr.po  it.po  ja.po  pl.po
src/asciidoc/: .gitignore  AUTHORS_README.adoc  CMakeLists.txt  Makefile  README.adoc  TRANSLATION_STATUS.adoc  TRANSLATION_STATUS_UPDATE.sh  TRANSLATORS_README.adoc  adoc2docbook.sh  adoc2html.sh  adoc2odt.sh  adoc2pdf.sh  adoc2po.sh  adoc2pot.sh  asciidoc-dblatex-custom.sty  epub-cover-docinfo-template.xml  i18n_status.csv  pdf-cover-dblatex.sty  po2adoc.sh  update-po.sh  webdocindex.adoc
src/asciidoc/CvPcb/: CMakeLists.txt  CvPcb.adoc
src/asciidoc/Eeschema/: CMakeLists.txt  Eeschema.adoc  Eeschema_automatic_classification_annotation.adoc  Eeschema_chapter_01.adoc  Eeschema_chapter_02.adoc  Eeschema_chapter_03.adoc  Eeschema_chapter_04.adoc  Eeschema_chapter_05.adoc  Eeschema_chapter_06.adoc  Eeschema_chapter_07.adoc  Eeschema_chapter_08.adoc  Eeschema_chapter_09.adoc  Eeschema_chapter_10.adoc  Eeschema_chapter_11.adoc  Eeschema_chapter_12.adoc  Eeschema_chapter_14.adoc  Eeschema_create_a_netlist.adoc  Eeschema_creating_customized_netlists_and_bom_files.adoc  Eeschema_design_verification_with_drc.adoc  Eeschema_generic_commands.adoc  Eeschema_hierarchical_schematics.adoc  Eeschema_introduction.adoc  Eeschema_libedit_complements.adoc  Eeschema_plot_and_print.adoc  Eeschema_schematic_creation_and_editing.adoc  Eeschema_viewlib.adoc  make.sh
src/asciidoc/GerbView/: GerbView.adoc  GerbView_chapter_01.adoc  GerbView_chapter_02.adoc
src/asciidoc/Getting_Started_in_KiCad/: Getting_Started_in_KiCad.adoc
src/asciidoc/IDF_Exporter/: IDF_Exporter.adoc
src/asciidoc/KiCad/: KiCad.adoc  make.sh
src/cvpcb/: CMakeLists.txt  cvpcb.adoc  cvpcb_footprint_libraries_tables.adoc
src/doc_writing_style_policy/: CMakeLists.txt  doc_wrinting_style_policy.adoc  doc_writing_style_policy.adoc
src/eeschema/: CMakeLists.txt  eeschema.adoc  eeschema_automatic_classification_annotation.adoc  eeschema_component_library_editor.adoc  eeschema_create_a_netlist.adoc  eeschema_creating_customized_netlists_and_bom_files.adoc  eeschema_design_verification_with_erc.adoc  eeschema_general_top_toolbar.adoc  eeschema_generic_commands.adoc  eeschema_hierarchical_schematics.adoc  eeschema_introduction.adoc  eeschema_libedit.adoc  eeschema_libedit_complements.adoc  eeschema_libedit_components.adoc  eeschema_library_editor.adoc  eeschema_main_top_menu.adoc  eeschema_plot_and_print.adoc  eeschema_schematic_creation_and_editing.adoc  eeschema_simulator.adoc  eeschema_symbol_library_table.adoc  eeschema_viewlib.adoc
src/gerbview/: CMakeLists.txt  gerbview.adoc
src/getting_started_in_kicad/: CMakeLists.txt  getting_started_in_kicad.adoc
src/gui_translation_howto/: CMakeLists.txt  gui_translation_howto.adoc
src/idf_exporter/: CMakeLists.txt  idf_exporter.adoc
src/kicad/: CMakeLists.txt  kicad.adoc  kicad_upgrading_from_v4_to_v5.adoc
src/pcb_calculator/: CMakeLists.txt  pcb_calculator.adoc
src/pcbnew/: CMakeLists.txt  pcbnew.adoc  pcbnew_create_and_modify_board.adoc  pcbnew_creating_editing_footprints.adoc  pcbnew_editing_tools.adoc  pcbnew_fabrication_files.adoc  pcbnew_footprint_placement.adoc  pcbnew_general_operations.adoc  pcbnew_installation.adoc  pcbnew_interactive_router.adoc  pcbnew_introduction.adoc  pcbnew_layers.adoc  pcbnew_managing_libs.adoc  pcbnew_python_scripting.adoc  pcbnew_routing.adoc  pcbnew_schematics.adoc  pcbnew_zones.adoc
src/pl_editor/: CMakeLists.txt  pl_editor.adoc
src/plugins/: CMakeLists.txt  plugins.adoc
src/rest/: runme.sh  updatepo.sh
src/style/: dblatex-pdf-ja.xsl
(+302 files in other folders)
