#
# Part of the KiCad ASCIIDOC Documentation Project
#
# (c)2015 KiCad Developers
# (c)2015 Brian Sidebotham <brian.sidebotham@gmail.com>
#

add_subdirectory( cvpcb )
add_subdirectory( eeschema )
add_subdirectory( gerbview )
add_subdirectory( getting_started_in_kicad )
add_subdirectory( idf_exporter )
add_subdirectory( kicad )
add_subdirectory( pcbnew )
add_subdirectory( pl_editor )
add_subdirectory( gui_translation_howto )

